# docbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/docbot/: chains.py  config.py  constants.py  schemas.py  vectorstore.py  version.py
src/docbot/fe/: chat.py  config.py  main.py  retrival.py
